<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doosan_teleop_msgs</name>
  <version>1.0.0</version>
  <description>
    Custom ROS2 message definitions for Doosan M1509 VR teleoperation.
    Defines VRControllerInput, VRHapticFeedback, and TeleopStatus messages
    used between the Unity Meta Quest 2 app and the ROS2 teleop stack.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
