<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doosan_vr_teleop</name>
  <version>1.0.0</version>
  <description>
    VR teleoperation stack for the Doosan M1509 robot arm using Meta Quest 2
    and Unity. Provides vr_bridge, haptic_node, servo_activator, and sim_input
    nodes plus MoveIt Servo configuration.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>doosan_teleop_msgs</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>dsr_bringup2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
